--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
+        "league/glide": "^1.5",
         "spatie/laravel-medialibrary": "^7.0.0"
     },
     "require-dev": {
