--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-dompdf": "^0.8.4",
+        "benjamincrozat/laravel-dropbox-driver": "^2.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "league/glide": "^1.5",
         "spatie/laravel-medialibrary": "^7.0.0"
     },
