--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "barryvdh/laravel-dompdf": "^0.8.4",
         "benjamincrozat/laravel-dropbox-driver": "^2.0",
+        "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
@@ -34,7 +35,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": ["doctrine/dbal"]
         }
     },
     "autoload": {
